dfir_rs/tests/compile-fail/stable/surface_loop_defer_tick_lazy.stderr
error: Operator `defer_tick_lazy(...)` is not allowed within a nested `loop { ... }` context. Use `defer_iteration()` or `defer_iteration_lazy()` instead.
 --> tests/compile-fail/stable/surface_loop_defer_tick_lazy.rs:8:42
  |
8 |                 inner_data -> batch() -> defer_tick_lazy() -> null();
  |                                          ^^^^^^^^^^^^^^^
